prevent cut off on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 .App {
-  padding: 80px;
+  padding: 80px 32px;
   text-align: center;
   position: relative;
 }
 
 .App__header {
+  align-items: center;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  color: white;
 }
 
 .App__body {
   color: white;
   display: flex;
   justify-content: center;
+  min-width: fit-content;
 }
